fix some layout issues, refs #10736
git-svn-id: svn://develop.studip.de/studip/trunk@62276 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/scss/buttons.scss
+++ b/resources/assets/stylesheets/scss/buttons.scss
@@ -104,6 +104,9 @@ button.button {
 .button.add {
     @include button-with-icon(add, clickable, info_alt);
 }
+.button.trash {
+    @include button-with-icon(trash, clickable, info_alt);
+}
 .button.download {
     @include button-with-icon(download, clickable, info_alt);
 }
